Basic HTML Created
Basic HTML structure made: Logo title, Main body sections and filler text, and Font Awesome for sourcing icons.

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chinese Recipes Tracking App!</title>
     <link href="scss/main.scss" rel="stylesheet" type="text/css">
 </head>
 <body>
-    Hello!
+    <div class="wrapper">
+
+        <!--Navigation bar-->
+        <div class="navbar">
+            <h1>Tracker App!</h1>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#"><i class="fa-solid fa-magnifying-glass-plus"></i>Add Recipes</a></li>
+                <li><a href="#"><i class="fa-solid fa-clipboard"></i>Recipes Made</a></li>
+                <li><a href="#"><i class="fa-solid fa-user"></i>Profile</a></li>
+            </ul>
+
+        </div>
+
+        <!--Main body of website-->
+        <div class="main_body">
+            <section class="Home Section">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            </section>
+            <section class="Add Recipes Section">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            </section>
+            <section class="Recipes Made Section">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            </section>
+            <section class="Profile Section">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            </section>
+        </div>
+
+    </div>
+    <script src = "script.js"></script>
+    <!--Font Awesome embeded kit code for custom symbols, icons, etc.-->
+    <script src="https://kit.fontawesome.com/d7dd5e5d55.js" crossorigin="anonymous"></script>
 </body>
 </html>
