Navbar Initial Styling
Basic styling of the left-side navbar, with added icons and buttons outlined.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!--Main body of website-->
-        <div class="main_body">
+        <div class="body">
             <section class="Home Section">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
