Class Name + Main Body Changes
"Navbar" changed to "navmenu" name for better description. Main body of the app also now has distinct sections, which the user can reach by either scrolling the page or using the navmenu!

--- a/public/index.html
+++ b/public/index.html
@@ -10,30 +10,30 @@
     <div class="wrapper">
 
         <!--Navigation bar-->
-        <div class="navbar">
+        <div class="navmenu">
             <h1>Tracker App!</h1>
             <ul>
-                <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
-                <li><a href="#"><i class="fa-solid fa-magnifying-glass-plus"></i>Add Recipes</a></li>
-                <li><a href="#"><i class="fa-solid fa-clipboard"></i>Recipes Made</a></li>
-                <li><a href="#"><i class="fa-solid fa-user"></i>Profile</a></li>
+                <li><a href="#Home Section"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#Add Recipes Section"><i class="fa-solid fa-magnifying-glass-plus"></i>Add Recipes</a></li>
+                <li><a href="#Recipes Made Section"><i class="fa-solid fa-clipboard"></i>Recipes Made</a></li>
+                <li><a href="#Profile Section"><i class="fa-solid fa-user"></i>Profile</a></li>
             </ul>
 
         </div>
 
         <!--Main body of website-->
         <div class="body">
-            <section class="Home Section">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            <section id="Home Section">
+                <p>Home section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
-            <section class="Add Recipes Section">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            <section id="Add Recipes Section">
+                <p>Add recipes section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
-            <section class="Recipes Made Section">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            <section id="Recipes Made Section">
+                <p>Recipes made section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
-            <section class="Profile Section">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            <section id="Profile Section">
+                <p>Profile section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
         </div>
 
