ID Name + Content Changes
"recipes made section" and "add recipes section" names updated for better description of their function. Profile section moved to the top of the menu list to improve the ordering of content. Body content given basic temporary colours for contrast.

--- a/public/index.html
+++ b/public/index.html
@@ -13,27 +13,27 @@
         <div class="navmenu">
             <h1>Tracker App!</h1>
             <ul>
-                <li><a href="#Home Section"><i class="fa-solid fa-house"></i>Home</a></li>
-                <li><a href="#Add Recipes Section"><i class="fa-solid fa-magnifying-glass-plus"></i>Add Recipes</a></li>
-                <li><a href="#Recipes Made Section"><i class="fa-solid fa-clipboard"></i>Recipes Made</a></li>
-                <li><a href="#Profile Section"><i class="fa-solid fa-user"></i>Profile</a></li>
+                <li><a href="#profileSection"><i class="fa-solid fa-user"></i>Profile</a></li>
+                <li><a href="#homeSection"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#recipeTrackerSection"><i class="fa-solid fa-clipboard"></i>Recipe Tracker</a></li>
+                <li><a href="#timeTrackerSection"><i class="fa-solid fa-clock"></i>Time Tracker</a></li>
             </ul>
 
         </div>
 
         <!--Main body of website-->
         <div class="body">
-            <section id="Home Section">
+            <section id="profileSection">
+                <p>Profile section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            </section>
+            <section id="homeSection">
                 <p>Home section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
-            <section id="Add Recipes Section">
-                <p>Add recipes section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            <section id="recipeTrackerSection">
+                <p>Recipe tracker section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
-            <section id="Recipes Made Section">
-                <p>Recipes made section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
-            </section>
-            <section id="Profile Section">
-                <p>Profile section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
+            <section id="timeTrackerSection">
+                <p>Time tracker section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
         </div>
 
