--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,15 @@
     <div class="wrapper">
 
         <!--Navigation bar-->
-        <div class="navmenu">
-            <h1>Tracker App!</h1>
-            <ul>
+        <nav class="navmenu">
+            <div class="logo">Tracker App!</div>
+            <ul class="menubuttons">
                 <li><a href="#profileSection"><i class="fa-solid fa-user"></i>Profile</a></li>
                 <li><a href="#homeSection"><i class="fa-solid fa-house"></i>Home</a></li>
                 <li><a href="#recipeTrackerSection"><i class="fa-solid fa-clipboard"></i>Recipe Tracker</a></li>
                 <li><a href="#timeTrackerSection"><i class="fa-solid fa-clock"></i>Time Tracker</a></li>
             </ul>
-
-        </div>
+        </nav>
 
         <!--Main body of website-->
         <div class="body">
