New Background + Navbar Improved!
Tasty Dim Sums background added to improve aesthetics of the website. Navigation menu colours updated to be more minimalistic and easier to view.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
 
-        <!--Navigation bar-->
+        <!--Website Navigation-->
         <nav class="navmenu">
             <div class="logo">Tracker App!</div>
             <div class="desktopmenu">
