Time Tracker Local Storage
Time tracker now functions. User can add new row, input date, recipe made and time taken, and this input will be stored locally, i.e. persistence even when page reloads. User can also delete or edit rows.

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,9 @@
                 <p>Recipe tracker section! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat eum architecto tempora ex dolore dolores, dignissimos at eligendi consequatur veritatis ab expedita doloribus cumque doloremque temporibus alias illo. Minima, eos!</p>
             </section>
             
-            <!--Recipe Time Tracker uses code adapted from: [dcode]. (2022 Mar 30). Build a Workout Tracker with JavaScript and Local Storage [Video]. Youtube. https://www.youtube.com/watch?v=HY6nPFsADDo Code class names and input types changed where necessary, adapted the HTML structure and modified it to allow users to add a new recipe entry and keep track of how long it takes them to cook the recipe.-->
+            <!--Recipe Time Tracker uses HTML & CSS code adapted from: [dcode]. (2022 Mar 30). Build a Workout Tracker with JavaScript and Local Storage [Video]. Youtube. https://www.youtube.com/watch?v=HY6nPFsADDo Code class names and input types changed where necessary, adapted the HTML structure and modified it to allow users to add a new recipe entry and keep track of how long it takes them to cook the recipe.-->
             <section id="timeTrackerSection">
-                <div id="timeContainer">
+                <div id="timeApp">
                     <table class="timeTracker">
                         <thead>
                             <tr>
