Meal Tracker local storage
Meal tracker can now save user inputs. E.g.: When user makes a recipe again, they can track the amount of times they've made that recipe by updating the number on that particular recipe's meal card. This data is now stored locally, so after a refresh the meal card data remains!

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             <!--Meal Tracker Section: lets users keep track of how many times they've made a certain recipe-->
             <section id="mealTrackerSection">
                 <div class="cardWrapper">
-                    <div class="mealCard">
+                    <div class="mealCard" card-id="card1">
                         <!--Fried Rice card image. Photo by Jay NIper on Unsplash: https://unsplash.com/photos/white-ceramic-plate-with-rice-and-stainless-steel-fork-XciY4hwqnNk -->
                         <img src="scss/images/jay-nlper-XciY4hwqnNk-unsplash.jpg">
                         <div class="meal-content">
@@ -56,11 +56,11 @@
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                             <button type="button" class="expandButton">View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
-                                <input type="number" class="amountEntry">
+                                <input type="number" class="amountEntry" value="0">
                             <h4>Times!</h4>
                         </div>
                     </div>
-                    <div class="mealCard">
+                    <div class="mealCard" card-id="card2">
                         <!--Chili Dumpling card image. Photo by Luna Wang on Unsplash: https://unsplash.com/photos/a-bowl-of-soup-ZejuCsw8Ofw -->
                         <img src="scss/images/luna-wang-ZejuCsw8Ofw-unsplash.jpg">
                         <div class="meal-content">
@@ -68,11 +68,11 @@
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                             <button type="button" class="expandButton">View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
-                                <input type="number" class="amountEntry">
+                                <input type="number" class="amountEntry" value="0">
                             <h4>Times!</h4>
                         </div>
                     </div>
-                    <div class="mealCard">
+                    <div class="mealCard" card-id="card3">
                         <!--Spring Roll card card image. Photo by Alexandra Tran on Unsplash: https://unsplash.com/photos/brown-bread-on-white-ceramic-plate-UkudQyyeovs -->
                         <img src="scss/images/alexandra-tran-UkudQyyeovs-unsplash.jpg">
                         <div class="meal-content">
@@ -80,7 +80,19 @@
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                             <button type="button" class="expandButton">View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
-                                <input type="number" class="amountEntry">
+                                <input type="number" class="amountEntry" value="0">
+                            <h4>Times!</h4>
+                        </div>
+                    </div>
+                    <div class="mealCard" card-id="card4">
+                        <!--Sweet & Sour Pork card card image. Photo by Israel Albornoz on Unsplash: https://unsplash.com/photos/cooked-food-on-white-ceramic-plate-8iiaALrjR54 -->
+                        <img src="scss/images/israel-albornoz-8iiaALrjR54-unsplash.jpg">
+                        <div class="meal-content">
+                            <h3>Sweet & Sour Pork</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <button type="button" class="expandButton">View Recipe &plus;</button>
+                            <h4>I've made this recipe...</h4>
+                                <input type="number" class="amountEntry" value="0">
                             <h4>Times!</h4>
                         </div>
                     </div>
