Meal Tracker recipe details
Recipe details pop-up screen's basic HTML. This screen will appear when the user clicks 'View recipe', revealing some info and cooking methods

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
 
             <!--Meal Tracker Section: lets users keep track of how many times they've made a certain recipe-->
             <section id="mealTrackerSection">
+                <!--Meal cards (recipe overview) section-->
                 <div class="cardWrapper">
                     <div class="mealCard" card-id="card1">
                         <!--Fried Rice card image. Photo by Jay NIper on Unsplash: https://unsplash.com/photos/white-ceramic-plate-with-rice-and-stainless-steel-fork-XciY4hwqnNk -->
@@ -94,6 +95,19 @@
                             <h4>I've made this recipe...</h4>
                                 <input type="number" class="amountEntry" value="0">
                             <h4>Times!</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <!--View Recipes pop-up section-->
+                <div class="mealDetails">
+                    <button type="button" class="closeMealDetails">Close</button>
+                    <div class="mealDetailsContent">
+                        <h2 class="recipeName">Recipe Name</h2>
+                        <p class = "recipeInfo">Around 10 Minutes</p>
+                        <div class="mealMethod">
+                            <h3>Method:</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eveniet omnis rerum itaque corporis enim laborum aliquam fugit aspernatur autem saepe, deserunt et, inventore recusandae dignissimos quam, qui distinctio. Illum.</p>
                         </div>
                     </div>
                 </div>
