General pop-up screen improvements
Changed the 'x' button to a red colour, with a hover affect and a pointer cursor to keep it consistent with the styling of the web app

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
                 <div class="mealDetails">
                     <ul onclick=closeMealDetails()><i class="fa-solid fa-x"></i></ul>
                     <div class="mealDetailsContent">
-                        <h2 class="recipeName">Recipe Name</h2>
+                        <h2 class="recipeName">Name</h2>
                         <p class = "recipeInfo">Around 10 Minutes</p>
                         <div class="mealMethod">
                             <h3>Method:</h3>
