--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,10 @@
 
             <!--Meal Tracker Section: lets users keep track of how many times they've made a certain recipe-->
             <section id="mealTrackerSection">
-                <h1>Meal Tracker</h1>
-                <h2>View iconic Chinese recipes here. You can keep track of just how many times you've made a meal to discover your taste and texture preferences!</h2>
+                <div class="mealTrackerIntro">
+                    <h1>Meal Tracker</h1>
+                    <h2>View iconic Chinese recipes here. You can keep track of just how many times you've made a meal to discover your taste and texture preferences!</h2>
+                </div>
                 <!--Meal cards (recipe overview) section-->
                 <div class="cardWrapper">
                     <div class="mealCard" card-id="card1">
@@ -67,7 +69,7 @@
                         <img src="scss/images/jay-nlper-XciY4hwqnNk-unsplash.jpg">
                         <div class="meal-content">
                             <h3>Fried Rice</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <p>A classic Chinese dish, found aroudn the world in almost every Chinese restaurant. While thousands of variations exist, this recipe is the fundamental fried rice recipe: quick, simple, and delicious!</p>
                             <button type="button" class="expandButton" onclick=openMealDetails()>View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
                                 <input type="number" class="amountEntry" value="0">
@@ -79,7 +81,7 @@
                         <img src="scss/images/luna-wang-ZejuCsw8Ofw-unsplash.jpg">
                         <div class="meal-content">
                             <h3>Chili Dumplings</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <p>Delicious dumplings with a juicy pork and chives filling, firm outer pastry layer, topped with a strong soy sauce mix to elevate flavour, and finished with fresh chilis and spring onion for a kick.</p>
                             <button type="button" class="expandButton" onclick=openMealDetails()>View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
                                 <input type="number" class="amountEntry" value="0">
@@ -91,7 +93,7 @@
                         <img src="scss/images/alexandra-tran-UkudQyyeovs-unsplash.jpg">
                         <div class="meal-content">
                             <h3>Spring Rolls</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <p>Crispy spring rolls! With a chicken and vegetable filling, wrapped inside light and incredibly crispy wrapping with a satisfying crunch. A must-have side dish that will enhance the experience of any occasion!</p>
                             <button type="button" class="expandButton" onclick=openMealDetails()>View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
                                 <input type="number" class="amountEntry" value="0">
@@ -103,13 +105,16 @@
                         <img src="scss/images/israel-albornoz-8iiaALrjR54-unsplash.jpg">
                         <div class="meal-content">
                             <h3>Sweet & Sour Pork</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            <p>A favourite amongst restaurant menus, sweet & sour pork combine the crispy and juicy texture of battered pork together with a tangy and sweet sauce, finsihed with stir-fried vegetables.</p>
                             <button type="button" class="expandButton" onclick=openMealDetails()>View Recipe &plus;</button>
                             <h4>I've made this recipe...</h4>
                                 <input type="number" class="amountEntry" value="0">
                             <h4>Times!</h4>
                         </div>
                     </div>
+                </div>
+                <div class="loadMoreRecipes">
+                    <button type="button" class="loadButton">More Recipes in the future!</button>
                 </div>
 
                 <!--View Recipes pop-up section-->
@@ -129,8 +134,10 @@
             <!--Recipe Time Tracker Section: lets users keep track of how long it took themselves to make a certain recipe-->
             <!--Recipe Time Tracker uses HTML & CSS code adapted from: [dcode]. (2022 Mar 30). Build a Workout Tracker with JavaScript and Local Storage [Video]. Youtube. https://www.youtube.com/watch?v=HY6nPFsADDo Code class names and input types changed where necessary, adapted the HTML structure and modified it to allow users to add a new recipe entry and keep track of how long it takes them to cook the recipe.-->
             <section id="timeTrackerSection">
-                <h1>Recipe Time Tracker</h1>
-                <h2>Every recipe has an estimated preparation time needed, but not everyone works at the same pace. Use the tool below to help keep track of how long it takes yourself to make your favourite recipes!</h2>
+                <div class="timeTrackerIntro">
+                    <h1>Recipe Time Tracker</h1>
+                    <h2>Every recipe has an estimated preparation time needed, but not everyone works at the same pace. Use the tool below to help keep track of how long it takes yourself to make your favourite recipes!</h2>
+                </div>
                 <div id="timeApp">
                     <table class="timeTracker">
                         <thead>
