Pop-up screen styling continued
The pop-up screen now has associated data for fried rice (other meal cards currently do not have their own associated data). background colour changed to white for improved readability.

--- a/public/index.html
+++ b/public/index.html
@@ -121,11 +121,17 @@
                 <div class="mealDetails">
                     <ul onclick=closeMealDetails()><i class="fa-solid fa-x"></i></ul>
                     <div class="mealDetailsContent">
-                        <h2 class="recipeName">Name</h2>
-                        <p class = "recipeInfo">Around 10 Minutes</p>
+                        <h2 class="recipeName">Fried Rice</h2>
+                        <p class = "recipeInfo">Serves 2 | Around 15 Minutes | Allergens: Eggs</p>
                         <div class="mealMethod">
+                            <h3>Ingredients:</h3>
+                            <p>3 cups short-grain rice, 2/3 cup chopped carrots, 1/2 cup peas, 1 clove garlic, 2 large eggs, 2-3 tbsp vegetable/neutral-tasting oil, 1 tbsp soy sauce, 1 tsp MSG.</p>
                             <h3>Method:</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eveniet omnis rerum itaque corporis enim laborum aliquam fugit aspernatur autem saepe, deserunt et, inventore recusandae dignissimos quam, qui distinctio. Illum.</p>
+                            <p>1 - Wash and cook the rice in a rice cooker. For best results and to avoid soggy/clumpy rice, cook rice a day in advance and refrigerate overnight.</p>
+                            <p>2 - Put carrots and peas in a saucepan with water. Bring to a boil or until vegetables are cooked through, then immediately drain and set aside.</p>
+                            <p>3 - Heat a wok over high heat, and add oil. Once oil is hot, add in vegetables with garlic and cook until fragrant. Add eggs and scramble to combine.</p>
+                            <p>4 - Add in your pre-cooked rice, and stir. Use the back of the spatula to break rice clumps. Add soy sauce, MSG and stir quickly.</p>
+                            <p>5 - Your fried rice is ready! Serve while hot.</p>
                         </div>
                     </div>
                 </div>
